--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "PEG Parser Combinator JavaScript Library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter progress ./test/index.js",
+    "test-spec": "./node_modules/.bin/mocha --reporter spec ./test/index.js"
   },
   "repository": {
     "type": "git",
